syntax = "proto3";

package service;

option go_package = "paint/internal/gRPC/imageProcessingService";


//ImageProcessingService Definition
//protoc --go_out=. --go_opt=paths=source_relative --go-grpc_out=. --go-grpc_opt=paths=source_relative image-processing-service.proto

service ImageProcessingService {
  rpc pyrMeanShiftFilter (PyrMeanShiftFilteringParams) returns (PyrMeanShiftFilteringResponse);
}

message PyrMeanShiftFilteringParams {
  string in = 1;
}

message PyrMeanShiftFilteringResponse {
  string out = 1;
  Error error = 2;
}

message Error {
  string code = 1;
  string message = 2;
}

